ops/Helm/shortlink-common/draft/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: shortlink-landing
spec:
  parentRefs:
    - name: internal-gateway
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: shortlink-landing
          port: 8080
